@@ -1,3 +1,8 @@
+Thu Feb 27 08:01:41 2003  George Lebl <jirka@5z.com>
+
+	* src/graphing.c: allow graphing more then one function and fix
+	  an error with too high function values.
+
 Wed Feb 26 14:19:23 2003  George Lebl <jirka@5z.com>
 
 	* src/graphing.c: plot every 2 pixels and optimize things a bit
